--- a/snake.html
+++ b/snake.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>贪吃蛇完整版</title>
+    <title>贪吃蛇</title>
     <style>
         #gameCanvas {
             border: 2px solid #333;
